<resources>
    <string name="app_name">Virta Test</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_and_benefit">Register and benefit</string>
    <string name="log_in">Log In</string>
    <string name="forgot">I Forgot</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_image">login image</string>
    <string name="login_and_charge">Log In and Charge!</string>
    <string name="title_stations">Stations</string>
    <string name="kw">kW</string>

</resources>