<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="0dp"
        app:srcCompat="@drawable/ic_login"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/login_image" />

    <EditText
        android:id="@+id/eTEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/eTPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTEmailAddress" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/purple_700"
        android:text ="@string/forgot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTPassword" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/purple_700"
        android:text ="@string/register_and_benefit"
        app:layout_constraintLeft_toRightOf="@+id/tvForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/eTPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/yellow"
        android:gravity="start|center_vertical"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="RtlSymmetry">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>